added resume page

--- a/cabralsylvester.github.io/index.html
+++ b/cabralsylvester.github.io/index.html
@@ -59,10 +59,10 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
-                   </li>
-                    <li>
-                        <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a>
-                   </li>
+                        <li>
+                            <a href="./Cabral.Sylvester-Resume.pdf">CV</a>
+                       </li>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -79,9 +79,9 @@
                     <div class="intro-text">
                         <h1 class="name">Cabral Sylvester</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer</span><br>
-                        <!-- <h6>cabralsylvester@gmail.com</h6>
-                        <h6>(516) 322-4911</h6> -->
+                        <span class="skills">Web Developer1</span><br>
+                        <h6>cabralsylvester@gmail.com</h6>
+                        <h6>(516) 322-4911</h6>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@
                         <h3>Around the Web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/cabral.sylvester" class="btn-social btn-outline"><span class="sr-only">Github</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Github</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
@@ -364,8 +364,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
     <!-- Future home to Banking App Link -->
-    <h2>Budgeting App<a href="https://cabralsylvester.github.io/budget_app_final_project.io/"</h2>
-                            <!-- <h2>Budgeting App</h2> -->
+                            <h2>Budgeting App</h2>
                             <hr class="star-primary">
     <!-- Banking App Image -->
                             <img src="img/portfolio/Bankingapp.jpg" class="img-responsive img-centered" alt="">
@@ -404,7 +403,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
       <!-- Future home to dice game link  -->
-                            <h2>Dice_Game <a href="https://cabralsylvester.github.io/dice_project/"</h2>
+                            <h2>Dice Game</h2>
                             <hr class="star-primary">
       <!-- DiceGame jpg -->
                             <img src="img/portfolio/DiceGame.jpg" class="img-responsive img-centered" alt="">
@@ -549,6 +548,21 @@
         </div>
     </div>
 
+    <div class="form-group">
+      <label for="firstName">Name</label>
+      <input name="firstName" type="text" class="form-control"/>
+
+      <label for="email">email</label>
+      <input name="email" type="text" class="form-control"/>
+
+      <label for="content">Content</label>
+      <input name="content" type="text" class="form-control"/>
+
+      <!-- Submit your form -->
+      <button type="submit" class="form-group">Submit Me</button>
+      <input type="submit" value="Finish!" />
+    </div>
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
@@ -565,24 +579,6 @@
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 
-<!-- enformed.io -->
-<form action="https://www.enformed.io/tgggz6ce" >
-
-
-  <div class="form-group">
-    <label for="firstName">Name</label>
-    <input name="firstName" type="text" class="form-control"/>
-
-    <label for="email">email</label>
-    <input name="email" type="text" class="form-control"/>
-
-    <label for="content">Content</label>
-    <input name="content" type="text" class="form-control"/>
-
-    <!-- Submit your form -->
-    <button type="submit" class="form-group">Submit Me</button>
-    <input type="submit" value="Finish!" />
-  </div>
 </body>
 
 </html>
