budget app link added

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
     <!-- Future home to Banking App Link -->
-    <h2>Budgeting App<a href="https://cabralsylvester.github.io/budget_app_final_project.io/"</h2>
+    <h2>Budgeting App<a href="https://cabralsylvester.github.io/budgetapp3/"</h2>
                             <!-- <h2>Budgeting App</h2> -->
                             <hr class="star-primary">
     <!-- Banking App Image -->
