--- a/cabralsylvester.github.io/index.html
+++ b/cabralsylvester.github.io/index.html
@@ -60,8 +60,8 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                         <li>
-                            <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a>
-                            <!-- <a href="./Cabral.Sylvester-Resume.pdf">CV</a> -->
+                            <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
+                            <a href="./Cabral.Sylvester-Resume.pdf">CV</a>
                        </li>
                     </li>
                 </ul>
