--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                         <a href="#contact">Contact</a>
                    </li>
                     <li>
-                        <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a>
+                        <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
+                        <a href="./Cabral.Sylvester-Resume.pdf">CV</a>
                    </li>
                 </ul>
             </div>
