forms functioning & styled

--- a/html/resume.html
+++ b/html/resume.html
@@ -59,10 +59,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
-                        <li>
-                            <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
-                            <a href="./img/cabralsylvesterresume.pdf">CV</a>
-                       </li>
+                    <li class="page-scroll">
+                        <a href="resume.html">CV</a>
+                        </li>
                     </li>
                 </ul>
             </div>
@@ -70,6 +69,14 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+
+<!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF -->
+    <div class="section__about">
+  <object data= "./cabralsylvesterresume.pdf" width="840px" height="500px"></object>
+</div>
+<!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF --> <!-- RESUME PDF -->
+
 
     <!-- Header -->
     <header>
@@ -107,7 +114,7 @@
                             </div>
                         </div>
     <!-- Farmart portfolio image -->
-                        <img src="img/Farmart2.png" class="img-responsive" alt="Farmart" style="width:350px;height:200px;">
+                        <img src="img/portfolio/Farmart2.png" class="img-responsive" alt="Farmart" style="width:350px;height:200px;">
                       <!-- "width:100%;height:100%;"  /// style="width:304px;height:179px;"-->
 
                     </a>
@@ -120,7 +127,7 @@
                             </div>
                         </div>
     <!-- Banking app portfolio image -->
-                        <img src="img/Bankingapp.jpg" class="img-responsive" style="width:350px;height:200px;">
+                        <img src="img/portfolio/Bankingapp.jpg" class="img-responsive" style="width:350px;height:200px;">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -131,7 +138,7 @@
                             </div>
                         </div>
      <!-- Dice Game app portfolio image -->
-                        <img src="img/DiceGame2.jpg" class="img-responsive" style="width:350px;height:200px;"">
+                        <img src="img/portfolio/DiceGame2.jpg" class="img-responsive" style="width:350px;height:200px;"">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -547,21 +554,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="form-group">
-      <label for="firstName">Name</label>
-      <input name="firstName" type="text" class="form-control"/>
-
-      <label for="email">email</label>
-      <input name="email" type="text" class="form-control"/>
-
-      <label for="content">Content</label>
-      <input name="content" type="text" class="form-control"/>
-
-      <!-- Submit your form -->
-      <button type="submit" class="form-group">Submit Me</button>
-      <input type="submit" value="Finish!" />
     </div>
 
     <!-- jQuery -->
