--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- correct html -->
 <head>
 
     <meta charset="utf-8">
@@ -62,7 +62,7 @@
                    </li>
                     <li>
                         <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
-                        <a href="./Cabral.Sylvester-Resume.pdf">CV</a>
+                        <a href="./img/cabralsylvesterresume.pdf">CV</a>
                    </li>
                 </ul>
             </div>
@@ -107,7 +107,7 @@
                             </div>
                         </div>
     <!-- Farmart portfolio image -->
-                        <img src="img/portfolio/Farmart2.png" class="img-responsive" alt="Farmart" style="width:350px;height:200px;">
+                        <img src="img/Farmart2.png" class="img-responsive" alt="Farmart" style="width:350px;height:200px;">
                       <!-- "width:100%;height:100%;"  /// style="width:304px;height:179px;"-->
 
                     </a>
@@ -120,7 +120,7 @@
                             </div>
                         </div>
     <!-- Banking app portfolio image -->
-                        <img src="img/portfolio/Bankingapp.jpg" class="img-responsive" style="width:350px;height:200px;">
+                        <img src="img/Bankingapp.jpg" class="img-responsive" style="width:350px;height:200px;">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -131,7 +131,7 @@
                             </div>
                         </div>
      <!-- Dice Game app portfolio image -->
-                        <img src="img/portfolio/DiceGame2.jpg" class="img-responsive" style="width:350px;height:200px;"">
+                        <img src="img/DiceGame2.jpg" class="img-responsive" style="width:350px;height:200px;"">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -198,7 +198,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -210,50 +210,57 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
+                    <!-- <form name="sentMessage" id="contactForm" novalidate> -->
+                      <!-- enformed.io -->
+                      <!-- <form action="https://www.enformed.io/tgggz6ce" > -->
+
+
+
+                        <!-- <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Name</label>
                                 <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
                                 <p class="help-block text-danger"></p>
                             </div>
-                        </div>
-                        <div class="row control-group">
+                        </div> -->
+                        <!-- <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="email">Email Address</label>
                                 <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
                             </div>
-                        </div>
-                        <div class="row control-group">
+                        </div> -->
+                        <!-- <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Phone Number</label>
                                 <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
                                 <p class="help-block text-danger"></p>
                             </div>
-                        </div>
-                        <div class="row control-group">
+                        </div> -->
+                        <!-- <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="message">Message</label>
                                 <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
-                        </div>
-                        <br>
+                        </div> -->
+
+
+                        <!-- <br>
                         <div id="success"></div>
                         <div class="row">
                             <div class="form-group col-xs-12">
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
-                        </div>
-                    </form>
+                        </div> --> 
+                    <!-- </form>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
-    <footer class="text-center">
+    <!-- <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
@@ -265,27 +272,27 @@
                     <div class="footer-col col-md-4">
                         <!-- <h3>Around the Web</h3> -->
 
-                        <h3>Location</h3>
-                        <p>New York, N.Y.
-                        <br>Washington, D.C.</p>
+                        <!-- <h3>Location</h3> -->
+                        <!-- <p>New York, N.Y. -->
+                        <!-- <br>Washington, D.C.</p> -->
 
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
+                        <!-- <h3>Around the Web</h3>
+                        <ul class="list-inline"> -->
+                            <!-- <li>
                                 <a href="https://www.facebook.com/cabral.sylvester" class="btn-social btn-outline"><span class="sr-only">Github</span><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
                             </li> -->
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">email</span><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
+                            </li> -->
+                            <!-- <li>
                                 <a href="https://www.linkedin.com/in/cabral-sylvester-297b3840/" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li> -->
+                            <!-- </li>  -->
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
@@ -299,7 +306,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Cabral Sylvester 2017
+                        <!-- Copyright &copy; Cabral Sylvester 2017 -->
                     </div>
                 </div>
             </div>
@@ -367,9 +374,9 @@
     <!-- Future home to Banking App Link -->
     <h2>Budgeting App<a href="https://cabralsylvester.github.io/budgetapp3/"</h2>
                             <!-- <h2>Budgeting App</h2> -->
-                            <hr class="star-primary">
+                            <!-- <hr class="star-primary"> -->
     <!-- Banking App Image -->
-                            <img src="img/portfolio/Bankingapp.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/Bankingapp.jpg" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -405,10 +412,10 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
       <!-- Future home to dice game link  -->
-                            <h2>Dice_Game <a href="https://cabralsylvester.github.io/dice_project/"</h2>
-                            <hr class="star-primary">
+                            <h2>Dice Game <a href="https://cabralsylvester.github.io/dice_project/"</h2>
+                            <!-- <hr class="star-primary"> -->
       <!-- DiceGame jpg -->
-                            <img src="img/portfolio/DiceGame.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/DiceGame.jpg" class="img-responsive img-centered" alt="">
                             <ul>
                               <li>The game has 2 players, playing in rounds. In each turn, a player rolls a dice as many times as he or she wishes.</li>
                               <li>Each result get added to his ROUND score.</li>
@@ -551,39 +558,188 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- <script src="vendor/jquery/jquery.min.js"></script> -->
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="vendor/bootstrap/js/bootstrap.min.js"></script> -->
 
     <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!-- <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script> -->
 
     <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
+    <!-- <script src="js/freelancer.min.js"></script> -->
+
+
+
+
+
+
+  <section id="contact">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <h2>Contact Me</h2>
+                  <hr class="star-primary">
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-8 col-lg-offset-2">
 
 <!-- enformed.io -->
 <form action="https://www.enformed.io/tgggz6ce" >
 
+    <div class="row control-group">
+      <div class="form-group col-xs-12 floating-label-form-group controls"  >
+        <label for="firstName">Name</label>
+        <input name="firstName" type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name."/>
+        <p class="help-block text-danger"></p>
+     </div>
+   </div>
 
-  <div class="form-group">
+    <div class="row control-group">
+        <div class="form-group col-xs-12 floating-label-form-group controls">
+          <label for="email">email</label>
+          <input name="email" type="text" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address."/>
+          <p class="help-block text-danger"></p>
+      </div>
+   </div>
+
+    <div class="row control-group">
+      <div class="form-group col-xs-12 floating-label-form-group controls">
+        <label for="phone">Phone</label>
+        <input name="phone" type="text" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number."/>
+        <p class="help-block text-danger"></p>
+        </div>
+      </div>
+
+  <div class="row control-group">
+      <div class="form-group col-xs-12 floating-label-form-group controls">
+      <label for="message">Message</label>
+      <textarea rows="5" input name="Message" type="text" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+      <p class="help-block text-danger"></p>
+  </div>
+</div>
+  <br>
+  <div id="success"></div>
+    <div class="row">
+    <div class="form-group col-xs-12">
+    <button type="submit" class="btn btn-success btn-lg">Send</button>
+    </div>
+    </div>
+  </form>
+  </div>
+  </div>
+</div>
+</section>
+
+
+<!-- Submit your form -->
+<!-- <button type="submit" class="form-group col-xs-12">Submit</button> -->
+<!-- <input type="submit" value="Finish!" />
+
+
+
+
+<!-- Footer -->
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4 col-lg-4">
+                    <!-- <h3>Location</h3>
+                    <p>New York, N.Y.
+                    <br>Washington, D.C.</p> -->
+                </div>
+                <div class="footer-col col-md-4">
+                    <!-- <h3>Around the Web</h3> -->
+
+                    <h3>Location</h3>
+                    <p>New York, N.Y.
+                    <br>Washington, D.C.</p>
+
+                    <h3>Around the Web</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.facebook.com/cabral.sylvester" class="btn-social btn-outline"><span class="sr-only">Github</span><i class="fa fa-fw fa-facebook"></i></a>
+                        </li>
+                        <!-- <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+                        </li> -->
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">email</span><i class="fa fa-fw fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/cabral-sylvester-297b3840/" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                        </li>
+                        <!-- <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                        </li> -->
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <!-- <h3>About Freelancer</h3> -->
+                    <!-- <p>XX<a href="http://startbootstrap.com">See My Resume</a>.</p> -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Cabral Sylvester 2017
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+
+
+<!-- jQuery -->
+<script src="vendor/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+<!-- Contact Form JavaScript -->
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/contact_me.js"></script>
+
+<!-- Theme JavaScript -->
+<script src="js/freelancer.min.js"></script>
+
+
+
+
+  <!-- enformed code --><!-- enformed code --><!-- enformed code --><!-- enformed code -->
+  <!-- <div class="form-group">
     <label for="firstName">Name</label>
     <input name="firstName" type="text" class="form-control"/>
 
     <label for="email">email</label>
     <input name="email" type="text" class="form-control"/>
 
-    <label for="content">Content</label>
-    <input name="content" type="text" class="form-control"/>
+    <label for="phone">Phone</label>
+    <input name="phone" type="text" class="form-control"/>
+
+    <label for="message">Message</label>
+    <input name="Message" type="text" class="form-control"/>
 
     <!-- Submit your form -->
-    <button type="submit" class="form-group">Submit Me</button>
-    <input type="submit" value="Finish!" />
-  </div>
+    <!-- <button type="submit" class="form-group">Submit</button> -->
+    <!-- <input type="submit" value="Finish!" /> -->
+  </div> -->
+  <!-- enformed code --><!-- enformed code --><!-- enformed code --><!-- enformed code -->
 </body>
 
 </html>
