--- a/html/index.html
+++ b/html/index.html
@@ -59,9 +59,10 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
-                    <li class="page-scroll">
-                        <a href="resume.html">CV</a>
-                        </li>
+                        <li>
+                            <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
+                            <a href="./Cabral.Sylvester-Resume.pdf">CV</a>
+                       </li>
                     </li>
                 </ul>
             </div>
@@ -69,10 +70,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
-    <div class="section__about">
-  <object data= "./Cabral.Sylvester-Resume.pdf" width="840px" height="500px"></object>
-</div>
 
     <!-- Header -->
     <header>
@@ -550,6 +547,21 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="form-group">
+      <label for="firstName">Name</label>
+      <input name="firstName" type="text" class="form-control"/>
+
+      <label for="email">email</label>
+      <input name="email" type="text" class="form-control"/>
+
+      <label for="content">Content</label>
+      <input name="content" type="text" class="form-control"/>
+
+      <!-- Submit your form -->
+      <button type="submit" class="form-group">Submit Me</button>
+      <input type="submit" value="Finish!" />
     </div>
 
     <!-- jQuery -->
