--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cabral Portfolio - Start Bootstrap Theme</title>
+    <title>Cabral Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,6 @@
                         <a href="#contact">Contact</a>
                    </li>
                     <li>
-                        <!-- <a href="./cabralsylvester.github.io/Cabral.Sylvester-Resume.pdf">CV</a> -->
                         <a href="./img/cabralsylvesterresume.pdf">CV</a>
                    </li>
                 </ul>
@@ -80,9 +79,9 @@
                     <div class="intro-text">
                         <h1 class="name">Cabral Sylvester</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer</span><br>
-                        <!-- <h6>cabralsylvester@gmail.com</h6>
-                        <h6>(516) 322-4911</h6> -->
+                        <span class="skills">Full Stack Web Developer</span><br>
+                        <!-- <h6>cabralsylvester@gmail.com</h6> -->
+                        <!-- <h6>(516) 322-4911</h6> -->
                     </div>
                 </div>
             </div>
@@ -186,7 +185,7 @@
                    </div>
                 </div>
                 <!-- <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>#</p>
                 </div> -->
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <a href="#" class="btn btn-lg btn-outline">
@@ -252,7 +251,7 @@
                             <div class="form-group col-xs-12">
                                 <button type="submit" class="btn btn-success btn-lg">Send</button>
                             </div>
-                        </div> --> 
+                        </div> -->
                     <!-- </form>
                 </div>
             </div>
@@ -334,9 +333,9 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
     <!-- Farmart link  -->
-                            <h2>FarMart <a href=" https://cabralsylvester.github.io/Project3_FarMart/"></h2>
+                            <h2>FarMart <a href="https://cabralsylvester.github.io/Project3_FarMart/"></h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/Farmart.jpg" class="img-responsive img-centered" alt=""> <a href="file:///Users/amilcarsylvester/wdi/Project3_FarMart/index.html">
+                            <img src="img/Farmart.jpg" class="img-responsive img-centered" alt=""> <a href="file:///Users/amilcarsylvester/wdi/Project3_FarMart/index.html">
                             <p>Farmers Markets are a wonderful place where customers can see the people who make their local products they purchase and consume. A very communal affair, vendor to customer relations are imperative to the success of these markets. FarMart is designed with both the vendors and customers in mind. This app allows vendors to post a bit about their stores and post the products they intend on bringing to the next upcoming farmers market. The customer has the ability to make reservations on the items the vendor is bringing. The customer then sets a time to pick up the order and pay in person. If the customer is a no-show, the vendor has power to contact the customer or open up the reserved items to the rest of the customers.<a href="https://sellfy.com/p/8Q9P/jV3VZ/"></p>
                             <ul class="list-inline item-details">
                                 <!-- <li>Client: -->
@@ -377,20 +376,25 @@
                             <!-- <hr class="star-primary"> -->
     <!-- Banking App Image -->
                             <img src="img/Bankingapp.jpg" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+
+                              <p>Choose 'plus' or 'minus' to indicate income or expense.</p>
+                              <p>Input 'description' of income or expense.</p>
+                              <p>Input numerical value of income or expense</p>
+                              <p>Click button to add</p>
+
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
                                     </strong>
-                                </li>
-                                <li>Date:
+                                </li> -->
+                                <!-- <li>Date:
                                     <strong><a href="http://startbootstrap.com">April 2014</a>
                                     </strong>
-                                </li>
-                                <li>Service:
+                                </li> -->
+                                <!-- <li>Service:
                                     <strong><a href="http://startbootstrap.com">Web Development</a>
                                     </strong>
-                                </li>
+                                </li> -->
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -417,13 +421,11 @@
       <!-- DiceGame jpg -->
                             <img src="img/DiceGame.jpg" class="img-responsive img-centered" alt="">
                             <ul>
-                              <li>The game has 2 players, playing in rounds. In each turn, a player rolls a dice as many times as he or she wishes.</li>
-                              <li>Each result get added to his ROUND score.</li>
-                              <li>BUT, if the player rolls a 1, all his ROUND score gets lost. After that, it's the next player's turn.</li>
-                              <li>The player can choose to 'Hold', which means that his ROUND score gets added to his OVERALL score. After that, it's the next player's turn.</li>
-                              <li>The first player to reach 100 points on GLOBAL score wins the game.</li>
+                              <p>The game has 2 players.</p>
+                              <p>The first player to reach 100 points wins.</p>
                             </ul>
-                            <!-- <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p> -->
+
+                            <!-- <p>Use this area of the page to describe project. by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p> -->
                             <ul class="list-inline item-details">
                                 <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -573,11 +575,6 @@
     <!-- Theme JavaScript -->
     <!-- <script src="js/freelancer.min.js"></script> -->
 
-
-
-
-
-
   <section id="contact">
       <div class="container">
           <div class="row">
@@ -624,25 +621,19 @@
   </div>
 </div>
   <br>
-  <div id="success"></div>
-    <div class="row">
-    <div class="form-group col-xs-12">
-    <button type="submit" class="btn btn-success btn-lg">Send</button>
+    <div id="success"></div>
+      <div class="row">
+        <div class="form-group col-xs-12">
+          <button type="submit" class="btn btn-success btn-lg">Send</button>
+        </div>
+      </div>
+    </form>
     </div>
-    </div>
-  </form>
-  </div>
   </div>
 </div>
 </section>
-
-
-<!-- Submit your form -->
-<!-- <button type="submit" class="form-group col-xs-12">Submit</button> -->
-<!-- <input type="submit" value="Finish!" />
-
-
-
+</body>
+</html>
 
 <!-- Footer -->
 <footer class="text-center">
@@ -717,29 +708,3 @@
 
 <!-- Theme JavaScript -->
 <script src="js/freelancer.min.js"></script>
-
-
-
-
-  <!-- enformed code --><!-- enformed code --><!-- enformed code --><!-- enformed code -->
-  <!-- <div class="form-group">
-    <label for="firstName">Name</label>
-    <input name="firstName" type="text" class="form-control"/>
-
-    <label for="email">email</label>
-    <input name="email" type="text" class="form-control"/>
-
-    <label for="phone">Phone</label>
-    <input name="phone" type="text" class="form-control"/>
-
-    <label for="message">Message</label>
-    <input name="Message" type="text" class="form-control"/>
-
-    <!-- Submit your form -->
-    <!-- <button type="submit" class="form-group">Submit</button> -->
-    <!-- <input type="submit" value="Finish!" /> -->
-  </div> -->
-  <!-- enformed code --><!-- enformed code --><!-- enformed code --><!-- enformed code -->
-</body>
-
-</html>
