--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         </div>
     </div>
 
-    jQuery -->
+    <!-- jQuery  -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
